# syncgraph-309

./: .gitignore  README.md  REPORT.md
client/: .env.example  .env.sample  Pipfile  app.py  app_streamlit.py  constants.py  package-lock.json  package.json  pyproject.toml  requirements.txt  run.sh  run_streamlit.sh  setup.ps1  setup.sh
client/.streamlit/: config.toml
client/api/: orouter_client.py
client/blueprint/: routes.py
client/core/: model_funcs.py  orouter_client.py
client/model/: smote_type.py
client/models/: response.py
client/prisma/: schema.prisma
client/views/: smote_models.py  smotenc_models.py
docs/: CODEOWNERS  CONTRIBUTING.md
interim/: app.py  pyproject.toml
interim/static/: tempfile
server/: app.py  constants.py  pyproject.toml  setup.sh
server/data/Sampled/: Theft_Over_Open_Data_Sampled.csv
server/img/: dt.dot
server/insights/: REPORT.md  TEMP.txt  c309_r1_toodu_dem.ipynb  c309_r1_toodu_pfr.ipynb  c309_r2_toodu_model.ipynb
server/insights/archive/: (old)_c309_r2_toodu_model.ipynb
server/insights/reports/: c309_r1_toodu_pfr.ipynb
server/models/: models.json
