[tool.poetry]
name = "server"
version = "1.0.0"
description = "Streamlit application for Theft Over Open Data"
authors = ["Muhammad Bilal Khan <@Hi-kue>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
